--- a/src/place_markers/package.xml
+++ b/src/place_markers/package.xml
@@ -14,6 +14,12 @@
   <depend>std_msgs</depend>
   <depend>python3-opencv</depend>
 
+  <depend>numpy</depend>
+  <depend>math</depend>
+  <depend>tf2_ros</depend>
+  <depend>visualization_msgs</depend>
+  <depend>pyquaternion</depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
