--- a/src/wall_follower/wall_follower/CMakeLists.txt
+++ b/src/wall_follower/wall_follower/CMakeLists.txt
@@ -25,6 +25,11 @@ find_package(nav_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Cylinder.msg"
+)
 
 ################################################################################
 # Build
