--- a/src/wall_follower/wall_follower/package.xml
+++ b/src/wall_follower/wall_follower/package.xml
@@ -10,6 +10,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- Dependencies for messages -->
+  <member_of_group>rosidl_interface_packages</member_of_group>
+  <build_depend>builtin_interfaces</build_depend>
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
 
