--- a/src/wall_follower/wall_follower/CMakeLists.txt
+++ b/src/wall_follower/wall_follower/CMakeLists.txt
@@ -25,6 +25,7 @@ find_package(nav_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(visualization_msgs REQUIRED)
 
 ################################################################################
 # Build
@@ -38,6 +39,7 @@ set(dependencies
   "rclcpp"
   "sensor_msgs"
   "tf2"
+  "visualization_msgs"
 )
 
 set(EXEC_NAME "wall_follower")
@@ -69,4 +71,5 @@ ament_export_dependencies(nav_msgs)
 ament_export_dependencies(rclcpp)
 ament_export_dependencies(sensor_msgs)
 ament_export_dependencies(tf2)
+ament_export_dependencies(visualization_msgs)
 ament_package()
